--- a/ToGol/app/src/main/res/layout/inicial_screen.xml
+++ b/ToGol/app/src/main/res/layout/inicial_screen.xml
@@ -1,145 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="250dp"
-    android:layout_height="300dp" >
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ImageView
-    android:layout_width="70dp"
-    android:layout_height="70dp"
-    android:id="@+id/imageView"
-    android:src="@drawable/ic_togol"
-    android:layout_alignParentTop="true"
-    android:layout_centerHorizontal="true" />
+        android:id="@+id/imageView"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/ic_togol" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/place"
-        android:id="@+id/textView"
-        android:layout_marginTop="72dp"
         android:layout_centerHorizontal="true"
-        android:gravity="center" />
+        android:layout_marginTop="72dp"
+        android:gravity="center"
+        android:text="@string/place"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
+        android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_below="@+id/textView"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/textView" />
 
     <TextView
+        android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/sport"
-        android:id="@+id/textView2"
         android:layout_below="@+id/editText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:text="@string/sport"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
+        android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/textView2"
+        android:layout_alignEnd="@+id/editText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText" />
+        android:layout_below="@+id/textView2" />
 
     <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/date"
-        android:id="@+id/textView3"
         android:layout_below="@+id/editText2"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="25dp" />
+        android:layout_marginTop="25dp"
+        android:text="@string/date"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <EditText
+        android:id="@+id/editText3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/editText3"
-        android:inputType="date"
-        android:layout_below="@+id/textView3"
+        android:layout_alignEnd="@+id/editText2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/editText2"
-        android:layout_alignEnd="@+id/editText2" />
+        android:layout_below="@+id/textView3"
+        android:inputType="date" />
 
     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/go_button"
-        android:id="@+id/button"
-        android:layout_below="@+id/editText3"
+        android:layout_alignEnd="@+id/editText3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp"
         android:layout_alignRight="@+id/editText3"
-        android:layout_alignEnd="@+id/editText3" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/textView4"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-        <!--android:text="@string/date"-->
-        <!--android:id="@+id/textViewDate"-->
-        <!--android:layout_marginBottom="96dp"-->
-        <!--android:layout_alignParentBottom="false"-->
-        <!--android:layout_alignEnd="@+id/textViewPlace"-->
-        <!--android:layout_gravity="bottom" />-->
-
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-        <!--android:text="@string/place"-->
-        <!--android:id="@+id/textViewPlace"-->
-        <!--android:layout_marginTop="36dp"-->
-        <!--android:layout_below="@+id/imageView"-->
-        <!--android:layout_alignStart="@+id/imageView"-->
-        <!--android:layout_gravity="center_vertical" />-->
-
-    <!--<ImageView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/imageView"-->
-        <!--android:src="@drawable/ic_togol"-->
-        <!--android:layout_alignParentTop="false"-->
-        <!--android:layout_centerHorizontal="false" />-->
-
-    <!--<Button-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="@string/go_button"-->
-        <!--android:id="@+id/button"-->
-        <!--android:layout_alignParentBottom="false"-->
-        <!--android:layout_centerHorizontal="false"-->
-        <!--android:layout_gravity="bottom" />-->
-
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
-        <!--android:text="@string/sport"-->
-        <!--android:id="@+id/textViewSport"-->
-        <!--android:layout_below="@+id/imageView"-->
-        <!--android:layout_alignEnd="@+id/button"-->
-        <!--android:layout_gravity="center_vertical" />-->
+        android:layout_below="@+id/editText3"
+        android:layout_marginTop="25dp"
+        android:text="@string/go_button" />
 
 </RelativeLayout>
