--- a/ToGol/app/src/main/res/layout/inicial_screen.xml
+++ b/ToGol/app/src/main/res/layout/inicial_screen.xml
@@ -53,7 +53,7 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonGoTo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/editText3"
